--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Rainblur Landing Page Template: Tailwind Toolbox</title>
+    <title>Loamy</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -21,13 +21,13 @@
     </style>
   </head>
 
-  <body class="leading-normal tracking-normal text-indigo-400 m-6 bg-cover bg-fixed" style="background-image: url('header.png');">
+  <body class="leading-normal tracking-normal text-gray-200 m-6 bg-cover bg-fixed" style="background-image: url('header.png');">
     <div class="h-full">
       <!--Nav-->
       <div class="w-full container mx-auto">
         <div class="w-full flex items-center justify-between">
-          <a class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
-            Rain<span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500">blur</span>
+          <a class="flex text-gray-200 items-center no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
+            Loamy
           </a>
 
           <div class="flex w-1/2 justify-end content-center">
@@ -55,20 +55,20 @@
         <!--Left Col-->
         <div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
           <h1 class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
-            Main
-            <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500">
-              Hero Message
-            </span>
-            to sell yourself!
+            Own your ride
           </h1>
-          <p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left">
-            Sub-hero message, not too long and not too short. Make it just right!
+          <p class="leading-normal md:text-2xl mb-8 text-center md:text-left">
+            Automatic service reminders
+            <br>
+            Step-by-step guides
+            <br>
+            AI-troubleshooting
           </p>
 
           <form class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
             <div class="mb-4">
               <label class="block text-blue-300 py-2 font-bold mb-2" for="emailaddress">
-                Signup for our newsletter
+                Join the waitlist
               </label>
               <input
                 class="shadow appearance-none border rounded w-full p-3 text-gray-700 leading-tight focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
@@ -80,7 +80,7 @@
 
             <div class="flex items-center justify-between pt-4">
               <button
-                class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
+                class="bg-green-600 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
                 type="button"
               >
                 Sign Up
@@ -90,8 +90,8 @@
         </div>
 
         <!--Right Col-->
-        <div class="w-full xl:w-3/5 p-12 overflow-hidden">
-          <img class="mx-auto w-full md:w-4/5 transform -rotate-6 transition hover:scale-105 duration-700 ease-in-out hover:rotate-6" src="macbook.svg" />
+        <div class="flex flex-col w-full xl:w-3/5 p-12 overflow-hidden ">
+          <img class="mx-auto w-full md:w-3/5 transform transition hover:scale-105 duration-700 ease-in-out hover:rotate-6" src="app.png" />
         </div>
 
         <!--Footer-->
